[package]
name = "wearable-collection"
version = "0.1.1"
authors = ["Anderson"]
edition = "2018"
description = "wearable collection nft msgs"
license = "Apache-2.0"
repository = "https://github.com/ksb0623/wearable-collection"

[dependencies]
cw-storage-plus = { version = "0.13.4" }
cosmwasm-std = { version = "1.0.0" }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
thiserror = { version = "1.0.23" }
